# Ai-Watch

./: .gitignore  README.md  package-lock.json  package.json  start_desk.ps1  tsconfig.json  vercel.json  vite.config.ts
docs/: AIWATCH_NOTES.md  WIRING.md
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/components/hiwonder_board/: CMakeLists.txt  board_lcd.c  ft6206.c  iic.c  spi.c  touch.c  xl9555.c
firmware/components/hiwonder_board/include/: board_lcd.h  ft6206.h  iic.h  spi.h  touch.h  xl9555.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_audio_codec.c  app_audio_codec.h  app_console.c  app_console.h  app_cred.c  app_cred.h  app_http.c  app_http.h  app_main.c  app_prov.c  app_prov.h  app_ui_lvgl.c  app_ui_lvgl.h  app_wifi.c  app_wifi.h  board_config.h  idf_component.yml  lv_conf.h
firmware_lvgl_board/: CMakeLists.txt  export_build_env.bat  export_build_env.ps1  idf_with_utf8.ps1  sdkconfig.defaults
firmware_lvgl_board/components/BSP/: CMakeLists.txt
firmware_lvgl_board/components/BSP/IIC/: iic.c  iic.h
firmware_lvgl_board/components/BSP/LED/: led.h
firmware_lvgl_board/components/BSP/RGBLCD/: ltdc.c  ltdc.h  ltdcfont.h
firmware_lvgl_board/components/BSP/SDIO/: spi_sdcard.c  spi_sdcard.h
firmware_lvgl_board/components/BSP/SPI/: spi.c  spi.h
firmware_lvgl_board/components/BSP/TOUCH/: ft6206.h  touch.h
firmware_lvgl_board/components/BSP/XL9555/: xl9555.c  xl9555.h
firmware_lvgl_board/main/: CMakeLists.txt  Kconfig.projbuild  app_audio_codec.c  app_audio_codec.h  app_http.c  app_http.h  app_wifi.c  app_wifi.h  board_config.h  main.c
firmware_lvgl_board/main/APP/: lv_ai_chat.c  lv_ai_chat.h  lv_mainstart.c  lv_mainstart.h  lvgl_demo.c  lvgl_demo.h
firmware_lvgl_scheme_a/: COPY_AND_MERGE.ps1  README_SCHEME_A.txt  sdkconfig.defaults.overlay
firmware_lvgl_scheme_a/main/: CMakeLists.txt  Kconfig.projbuild  board_config.h  idf_component.yml  main.c
newsrc/: App.tsx  api.ts  index.css  index.html  types.ts
server/: .env.example  install_export_deps.ps1  requirements.txt  run_server.ps1
server/app/: __init__.py  baidu_asr.py  baidu_auth.py  baidu_tts.py  db.py  deepseek_client.py  main.py  recording_export.py  recording_service.py  stt.py  voice_stream.py
server/static/: desk.html
(+1 files in other folders)
