idf_component_register(
    SRCS
        "app_main.c"
        "app_cred.c"
        "app_wifi.c"
        "app_http.c"
        "app_prov.c"
        "app_audio_codec.c"
        "app_console.c"
    INCLUDE_DIRS
        "."
    PRIV_REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        esp_http_client
        esp_http_server
        json
        driver
        esp_timer
        spi_flash
        heap
        freertos
        esp_codec_dev
        hiwonder_board
)
